# fast-yt-search

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt⁠
.github/workflows/: publish.yml
app/: main.py
app/static/swagger-ui/: swagger-ui-bundle.js
