[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-yt-search"
version = "0.8.1"
description = "Fast and lightweight unofficial YouTube search API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "yuzubb", email = "yuzubb@users.noreply.github.com" }
]

dependencies = [
    "fastapi>=0.68.0,<0.100.0",
    "uvicorn>=0.15.0",
    "httpx>=0.23.0",
    "dict2xml>=1.7.0",
]

[project.scripts]
fast-yt-search = "app.main:cli"

[project.urls]
"Homepage" = "https://github.com/yuzubb/fast-yt-search"
"Bug Tracker" = "https://github.com/yuzubb/fast-yt-search/issues"
